--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,19 @@ authors = ["David M. Rogers <predictivestatmech@gmail.com>"]
 license = "MIT"
 readme = "README.md"
 
+[tool.poetry.scripts]
+certified = "certified.certified:app"
+
 [tool.poetry.dependencies]
 python = ">=3.8,<4.0"
 cryptography = "^43.0.0"
 pydantic = "^2.8.2"
+typer = "^0.12.3"
+
+[tool.poetry.group.httpx]
+optional = true
+
+[tool.poetry.group.httpx.dependencies]
 httpx = "^0.27.0"
 
 [tool.poetry.group.docs]
@@ -20,6 +29,8 @@ mkdocs = "*"
 mkdocstrings = {extras = ["python"], version = "^0.25.2"}
 mkdocs-material = "^9.5.30"
 
+[tool.poetry.group.test]
+optional = true
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.3.2"
