--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ optional = true
 
 [tool.poetry.group.httpx.dependencies]
 httpx = "^0.27.0"
+uvicorn = "^0.30.6"
+
 
 [tool.poetry.group.docs]
 optional = true
