--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "certified"
-version = "0.5.0"
+version = "0.6.0"
 description = "The missing certificate infrastructure for web APIs."
 authors = [
             "David M. Rogers <predictivestatmech@gmail.com>",
@@ -9,6 +9,7 @@ license = "BSD-3-Clause"
 readme = "README.md"
 
 [tool.poetry.scripts]
+message   = "certified.message:app"
 certified = "certified.certified:app"
 
 [tool.poetry.dependencies]
@@ -16,6 +17,7 @@ python = ">=3.8,<4.0"
 cryptography = "^43.0.0"
 pydantic = "^2.8.2"
 typer = "^0.12.3"
+biscuit-python = "^0.3.0"
 
 [tool.poetry.group.httpx]
 optional = true
@@ -23,7 +25,6 @@ optional = true
 [tool.poetry.group.httpx.dependencies]
 httpx = "^0.27.0"
 uvicorn = "^0.30.6"
-
 
 [tool.poetry.group.docs]
 optional = true
