--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "certified"
-version = "0.6.2"
+version = "0.7.1"
 description = "The missing certificate infrastructure for web APIs."
 authors = [
             "David M. Rogers <predictivestatmech@gmail.com>",
@@ -18,6 +18,8 @@ cryptography = "^43.0.0"
 pydantic = "^2.8.2"
 typer = "^0.12.3"
 biscuit-python = "^0.3.0"
+python-logging-loki = "^0.3.1" # https://blog.pushp.ovh/capturing-fastapi-server-access-logs-using-loki-and-visualizing-them-on-grafana
+pyyaml = "^6.0.2"
 
 [tool.poetry.group.httpx]
 optional = true
