--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,14 @@
 [tool.poetry]
 name = "certified"
-version = "0.8.2"
+version = "0.8.3"
 description = "The missing certificate infrastructure for web APIs."
 authors = [
             "David M. Rogers <predictivestatmech@gmail.com>",
 ]
 license = "BSD-3-Clause"
 readme = "README.md"
+repository = "https://github.com/ORNL/certified"
+documentation = "https://certified.readthedocs.io/"
 
 [tool.poetry.scripts]
 message   = "certified.message:app"
