--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,9 +1,11 @@
 version: 2
 
+# Set the version of Python and other tools you might need
 build:
-  os: ubuntu-24.04
+  os: ubuntu-22.04
   tools:
     python: "3.10"
+    poetry: "1.7.1"
 
 #python:
 # install:
