--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,11 +5,16 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.10"
-    poetry: "1.7.1"
-
-#python:
-# install:
-#   - requirements: requirements.txt
+  jobs:
+    # https://browniebroke.com/blog/specify-docs-dependency-groups-with-poetry-and-read-the-docs/
+    post_create_environment:
+      # Install poetry
+      - pip install poetry
+      # Tell poetry to not use a virtual environment
+      - poetry config virtualenvs.create false
+    post_install:
+      # Install dependencies
+      - poetry install --with docs
 
 mkdocs:
   configuration: mkdocs.yml
