--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -15,6 +15,8 @@ build:
     post_install:
       # Install dependencies
       - poetry install --with docs
+      - pip install mkdocs-material
+      - pip install mkdocstrings-python
 
 mkdocs:
   configuration: mkdocs.yml
