--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ certified = "certified.certified:app"
 
 [tool.poetry.dependencies]
 python = ">=3.8,<4.0"
-cryptography = "^43.0.0"
+cryptography = ">=43.0.1"
 pydantic = "^2.8.2"
 typer = "^0.12.3"
 biscuit-python = "^0.3.0"
