--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ optional = true
 [tool.poetry.group.test.dependencies]
 pytest = "^8.3.2"
 mypy = "^1.11.1"
+pytest-cov = ">=4.1.0"
 
 [build-system]
 requires = ["poetry-core"]
