--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -29,7 +29,7 @@ jobs:
         pip install poetry
         poetry config virtualenvs.create false
 
-        poetry install --with all
+        poetry install --all-extras
 
     - name: Lint with mypy
       run: |
@@ -39,8 +39,8 @@ jobs:
       run: |
         pytest --cov
 
-    - name: Upload coverage to Codecov
-      if: matrix.python-version == 3.11 && startsWith(matrix.os, 'ubuntu')
-      uses: codecov/codecov-action@v3
-      env:
-        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+#   - name: Upload coverage to Codecov
+#     if: matrix.python-version == 3.11 && startsWith(matrix.os, 'ubuntu')
+#     uses: codecov/codecov-action@v3
+#     env:
+#       CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
