--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -13,8 +13,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ["ubuntu-latest", "macos-latest"]
-        python-version: ["3.8", "3.9", "3.11"]
+        #os: ["ubuntu-latest", "macos-latest"]
+        os: ["ubuntu-latest"]
+          #python-version: ["3.8", "3.9", "3.11"]
+        python-version: ["3.8"]
 
     steps:
     - uses: actions/checkout@v3
@@ -28,16 +30,15 @@ jobs:
       run: |
         pip install poetry
         poetry config virtualenvs.create false
-
-        poetry install --all-extras
-
-    - name: Lint with mypy
-      run: |
-        mypy certified tests
+        poetry install --with test,httpx
 
     - name: Test with pytest
       run: |
         pytest --cov
+
+    - name: Lint with mypy
+      run: |
+        mypy certified tests
 
 #   - name: Upload coverage to Codecov
 #     if: matrix.python-version == 3.11 && startsWith(matrix.os, 'ubuntu')
