--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ message   = "certified.message:app"
 certified = "certified.certified:app"
 
 [tool.poetry.dependencies]
-python = ">=3.8,<4.0"
+python = ">=3.9,<4.0"
 cryptography = ">=43.0.1"
 pydantic = "^2.8.2"
 typer = "^0.12.3"
@@ -23,12 +23,13 @@ biscuit-python = "^0.3.0"
 python-logging-loki = "^0.3.1" # https://blog.pushp.ovh/capturing-fastapi-server-access-logs-using-loki-and-visualizing-them-on-grafana
 pyyaml = "^6.0.2"
 
-[tool.poetry.group.httpx]
+[tool.poetry.group.http]
 optional = true
 
-[tool.poetry.group.httpx.dependencies]
+[tool.poetry.group.http.dependencies]
 httpx = "^0.27.0"
 uvicorn = "^0.30.6"
+fastapi = "^0.115.0"
 
 [tool.poetry.group.docs]
 optional = true
