--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -13,10 +13,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        #os: ["ubuntu-latest", "macos-latest"]
-        os: ["ubuntu-latest"]
-        #python-version: ["3.9", "3.11"]
-        python-version: ["3.9"]
+        os: ["ubuntu-latest", "macos-latest"]
+        python-version: ["3.9", "3.11"]
 
     steps:
     - uses: actions/checkout@v3
