--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "certified"
-version = "0.10.0"
+version = "1.0.0"
 description = "The missing certificate infrastructure for web APIs."
 authors = [
             "David M. Rogers <predictivestatmech@gmail.com>",
@@ -27,9 +27,9 @@ pyyaml = "^6.0.2"
 optional = true
 
 [tool.poetry.group.http.dependencies]
-httpx = "^0.27.0"
 uvicorn = "^0.30.6"
 fastapi = "^0.115.0"
+aiohttp = "^3.10.10"
 
 [tool.poetry.group.docs]
 optional = true
