--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "certified"
-version = "1.0.0"
+version = "1.0.1"
 description = "The missing certificate infrastructure for web APIs."
 authors = [
             "David M. Rogers <predictivestatmech@gmail.com>",
@@ -18,7 +18,7 @@ certified = "certified.certified:app"
 python = ">=3.9,<4.0"
 cryptography = ">=43.0.1"
 pydantic = "^2.8.2"
-typer = "^0.12.3"
+typer = ">=0.9,<1.0"
 biscuit-python = "^0.3.0"
 python-logging-loki = "^0.3.1" # https://blog.pushp.ovh/capturing-fastapi-server-access-logs-using-loki-and-visualizing-them-on-grafana
 pyyaml = "^6.0.2"
@@ -30,6 +30,7 @@ optional = true
 uvicorn = "^0.30.6"
 fastapi = "^0.115.0"
 aiohttp = "^3.10.10"
+starlette = ">=0.40.0"
 
 [tool.poetry.group.docs]
 optional = true
